<resources>
    <string name="app_name">Quadcare</string>
    <string name="heading_of_activity">Running a video file in an activity</string>
    <string name="getstarted">GET STARTED</string>
    <string name="random">YOU MADE IT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient">Patients</string>
    <string name="viewPatients">View Patients</string>
    <string name="viewDoctor">View Doctors</string>
    <string name="viewAppointments">View Appointments</string>
    <string name="ViewActivity" translatable="false">View Activities</string>
    <string name="doctor">Doctors</string>
    <string name="appointment">Appointments</string>
    <string name="shift_start_time">Shift Start Time</string>
    <string name="Successfully">Successfully</string>
    <string name="failed">failed</string>
    <string name="shiftendtime">shiftEndTime</string>
    <string name="reason_for_appointment">Reason for appointment</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="phone_number">phone number</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">email</string>
    <string name="address">Address</string>
    <string name="add_patient">Add Patient</string>
    <string name="textview">TextView</string>
    <string name="assign_to">Assign To</string>
    <string name="assign">Assign</string>
    <string name="view_apppointment">View Apppointment</string>
    <string name="view_patients">View Patients</string>
    <string name="view_doctors">View Doctors</string>
    <string name="doctorname">doctorName</string>
    <string name="patient_id">patient_Id</string>
    <string name="Notes">Notes</string>
    <string name="accessibility_service_label">accessibility_Service_Label</string>
    <string name="accessibility_service_description">accessibility_Service_Description</string>
    <string name="date" translatable="false">Date</string>
    <string name="time" translatable="false">TIme</string>
</resources>