<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddPatientActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:id="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="5dp"
                android:src="@drawable/quadcare"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="@string/add_patient"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text=""

                android:scaleX="1.3"
                android:scaleY="1.3"
                android:switchMinWidth="40dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:id="@+id/action_switch"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/add_patient_constraint"
        android:layout_weight="1">

        <EditText
            android:id="@+id/add_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@id/add_patient_constraint"
            app:layout_constraintStart_toStartOf="@id/add_patient_constraint"
            app:layout_constraintTop_toTopOf="@id/add_patient_constraint" />

        <EditText
            android:id="@+id/add_patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/add_patient_constraint"
            app:layout_constraintStart_toStartOf="@id/add_patient_constraint"
            app:layout_constraintTop_toBottomOf="@id/add_patient_name" />

        <EditText
            android:id="@+id/add_patient_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@id/add_patient_constraint"
            app:layout_constraintStart_toStartOf="@id/add_patient_constraint"
            app:layout_constraintTop_toBottomOf="@id/add_patient_email" />

        <EditText
            android:id="@+id/add_patient_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/add_patient_constraint"
            app:layout_constraintStart_toStartOf="@id/add_patient_constraint"
            app:layout_constraintTop_toBottomOf="@id/add_patient_age" />

        <EditText
            android:id="@+id/add_patient_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="@id/add_patient_constraint"
            app:layout_constraintStart_toStartOf="@id/add_patient_constraint"
            app:layout_constraintTop_toBottomOf="@id/add_patient_phone" />

        <FrameLayout
            android:id="@+id/add_patient_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/add_patient"
            android:background="@drawable/assign_btn"
            app:layout_constraintEnd_toEndOf="@id/add_patient_constraint"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@id/add_patient_constraint"
            app:layout_constraintTop_toBottomOf="@id/add_patient_address" />

        <ProgressBar
            android:id="@+id/assign_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primaryColor"
            android:max="100"
            android:minWidth="200dp"
            android:minHeight="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
