<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.AddDoctorActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:id="@+id/toolbar"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="5dp"
                android:src="@drawable/quadcare"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"
                android:textSize="20dp"
                android:text="@string/add_doctor"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text=""

                android:scaleX="1.3"
                android:scaleY="1.3"
                android:switchMinWidth="40dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:id="@+id/action_switch"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_doctor_constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/add_doctor_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toEndOf="@id/add_doctor_constraint"
            app:layout_constraintStart_toStartOf="@id/add_doctor_constraint"
            app:layout_constraintTop_toTopOf="@id/add_doctor_constraint" />

        <Spinner
            android:id="@+id/add_doctor_specialization"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@id/add_doctor_constraint"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/add_doctor_constraint"
            app:layout_constraintTop_toBottomOf="@+id/add_doctor_name"/>

        <EditText
            android:id="@+id/add_doctor_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@id/add_doctor_constraint"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/add_doctor_constraint"
            app:layout_constraintTop_toBottomOf="@id/add_doctor_specialization" />

        <EditText
            android:id="@+id/doctor_start_time"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/shift_start_time"
            android:inputType="time"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="@id/add_doctor_constraint"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/add_doctor_constraint"
            app:layout_constraintTop_toBottomOf="@+id/add_doctor_phone" />

        <EditText
            android:id="@+id/doctor_end_time"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/shiftendtime"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="@id/add_doctor_constraint"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/add_doctor_constraint"
            app:layout_constraintTop_toBottomOf="@+id/doctor_start_time" />

        <FrameLayout
            android:id="@+id/add_doctor_btn"
            android:layout_width="wrap_content"
            android:background="@drawable/assign_btn"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_doctor"
            app:layout_constraintEnd_toEndOf="@id/add_doctor_constraint"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/add_doctor_constraint"
            app:layout_constraintTop_toBottomOf="@+id/doctor_end_time" />

        <ProgressBar
            android:id="@+id/assign_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primaryColor"
            android:max="100"
            android:minWidth="200dp"
            android:minHeight="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>